# viam-cartographer

./: .canon.yaml  .gitignore  .gitmodules  LogWithIMU.txt  LogsWithIMUAligned.txt  Makefile  README.md  canon.make  go.mod  go.sum  helper-functions.go  helpers_test.go  integration_test.go  meta.json  outputTimeLogs.txt  outputTimeLogs_fixed.txt  outputTimeLogs_fixed2.txt  packaging.make  post_conversion.txt  pre_conversion.txt  pre_conversion1.txt  sensorprocess.go  sensorprocess_test.go  viam-cartographer.go  viam-cartographer_internal_test.go  viam-cartographer_test.go  viam_cartographer.go  viam_cartographer_internal_test.go  viam_cartographer_test.go
.artifact/: config.json  tree.json
.github/: actionlint.yml
.github/workflows/: appimage-comment.yml  appimage.yml  bump_dependencies.yml  bump_dependencys.yml  deploy_module.yml  main.yml  pr-labeler.yml  pullrequest-trusted.yml  pullrequest.yml  pullrequestclose.yml  releasecandidate.yml  stable.yml  test.yml
cartofacade/: capi.go  capi_mock.go  capi_test.go  carto_facade.go  carto_facade_mock.go  carto_facade_queue.go  carto_facade_queue_test.go  carto_facade_test.go  carto_facade_wrapper.go  carto_facade_wrapper_test.go  cgo_api.go  cgo_api_test.go  queue.go  queue_test.go  testhelpers.go
cartofacade/inject/: capi.go  carto_facade.go  queue.go
cartofacade/internal/capi/: capi.go  capi_test.go  testhelpers.go
config/: config.go  config_test.go
dataprocess/: dataprocess.go
debug_test/: .gitconfig  Makefile  README.md  main.c  main.go
debug_test/c_cpp/slam/: minunit.h  viam_carto.c  viam_carto.h  viam_carto_test.c
debug_test/go/carto/: main.go
debug_test/go/counter/: main.go
etc/: canon-update.sh  golangci.yaml  ld_wrapper.sh  tag_version.sh  utils.sh
etc/packaging/appimages/: carto_grpc_server-aarch64.yml  carto_grpc_server-x86_64.yml  cartographer-module-aarch64.yml  cartographer-module-x86_64.yml  package_release_carto.sh  package_release_module.sh  utils.sh
internal/dim-2d/: dim-2d.go  dim-2d_test.go  sensor-indices.go
internal/inject/: slam_service.go
internal/testhelper/: testhelper.go
module/: main.go  sample_linux.json  sample_osx.json
postprocess/: postprocess.go  postprocess_test.go
sensorprocess/: imusensorprocess.go  lidarsensorprocess.go  lidarsensorprocess_test.go  movementsensorprocess.go  movementsensorprocess_test.go  sensorprocess.go  sensorprocess_test.go  testhelper.go
sensors/: imu.go  imu_test.go  lidar.go  lidar_test.go  movementsensor.go  movementsensor_internal_test.go  movementsensor_test.go  odometer.go  odometer_test.go  sensor_mock.go  sensors.go  sensors_test.go  test_deps.go
sensors/imu/: imu.go  imu_test.go
sensors/inject/: imu.go  lidar.go  movementsensor.go  odometer.go
sensors/lidar/: lidar.go  lidar_test.go
sensors/lidar/dim-2d/: dim-2d.go  dim-2d_test.go  sensor-indices.go
sensors/utils/: utils.go
slam_service_c/: main.c
slam_service_go/: main.go
telemetry/: telemetry.go
test-cgo/: test-cgo.go
testhelper/: integrationtesthelper.go  testhelper.go
testhelper/inject/: slam_service.go
viam-cartographer/: .gitignore  CMakeLists.txt  README.md
viam-cartographer/api/: Makefile
viam-cartographer/api/go/carto/: main.go
viam-cartographer/api/go/counter/: main.go
viam-cartographer/api/src/: minunit_example.c  viam_carto_string.h
viam-cartographer/api/src/counter/: main.c  mycounter.h
viam-cartographer/api/src/debug/: debug.c
viam-cartographer/api/src/slam/: bstrwrap.cpp  carto_facade.c  carto_facade.h  carto_facade_cpp.cpp  dbg.h  viam_carto.c  viam_carto.h  viam_carto_string.c  viam_carto_string.h  viam_carto_test.c
viam-cartographer/cartographer_build_utils/: CMakeLists.txt  carto.patch
viam-cartographer/cartographer_patches/: carto.patch
viam-cartographer/lua_files/: locating_in_map.lua  map_builder.lua  map_builder_server.lua  mapping_new_map.lua  pose_graph.lua  trajectory_builder.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua  updating_a_map.lua
viam-cartographer/scripts/: build_cartographer.sh  build_viam_cartographer.sh  build_viam_cartographer_debug.sh  install_dependencies.sh  rebuild_viam_cartographer.sh  run_cartographer.sh  setup_cartographer.sh  setup_cartographer_linux.sh  setup_cartographer_macos.sh  test_cartographer.sh
viam-cartographer/src/: main.cc  main_test.cc
viam-cartographer/src/c-api/: slam_service_c.cc  slam_service_c.h
viam-cartographer/src/carto_facade/: bstrlib.h  bstrwrap.cpp  bstrwrap.h  carto_facade.cc  carto_facade.h  carto_facade_test.cc  io.cc  io.h  io_demo_test.cc  io_test.cc  map_builder.cc  map_builder.h  test_helpers.cc  test_helpers.h  util.cc  util.h  util_test.cc
viam-cartographer/src/carto_facade_go/: carto_facade.go  carto_facade_test.go
viam-cartographer/src/carto_facade_queue/: carto_facade_queue.go  carto_facade_queue_test.go
viam-cartographer/src/io/: cairo_jpg.cc  cairo_jpg.h  color.cc  color.h  draw_trajectories.cc  draw_trajectories.h  file_handler.cc  file_handler.h  file_handler_test.cc  image.cc  image.h  submap_painter.cc  submap_painter.h
viam-cartographer/src/mapping/: map_builder.cc  map_builder.h
viam-cartographer/src/slam_service/: a.out  config.cc  config.h  config_test.cc  j.json  mycounter.c  mycounter.cc  mycounter.h  slam_service.cc  slam_service.h  slam_service_test.cc  slam_service_wrapper.c  test.cpp
viam-cartographer/src/utils/: slam_service_helpers.cc  slam_service_helpers.h  test_helpers.cc  test_helpers.h
